<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_primary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <!-- Sección del Logo y Nombre de la App -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/logoImageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/appNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/adlam_display"
                android:paddingStart="16dp"
                android:text="@string/app_name"
                android:textColor="@color/font_primary"
                android:textSize="32sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- Mensaje instructivo -->
        <TextView
            android:id="@+id/instructionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/adlam_display"
            android:gravity="center"
            android:paddingTop="8dp"
            android:text="@string/register_message"
            android:textColor="@color/font_primary"
            android:textSize="20sp" />

        <!-- Campos de entrada de texto -->
        <EditText
            android:id="@+id/inputFirstName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/rounded_input"
            android:fontFamily="@font/adlam_display"
            android:hint="@string/placeholder_name"
            android:padding="12dp"
            android:textColor="@color/font_secondary" />

        <EditText
            android:id="@+id/inputLastName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/rounded_input"
            android:fontFamily="@font/adlam_display"
            android:hint="@string/placeholder_lastname"
            android:padding="12dp"
            android:textColor="@color/font_secondary" />

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/rounded_input"
            android:fontFamily="@font/adlam_display"
            android:hint="@string/placeholder_email"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:textColor="@color/font_secondary" />

        <EditText
            android:id="@+id/inputPhone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/rounded_input"
            android:fontFamily="@font/adlam_display"
            android:hint="@string/placeholder_phone"
            android:inputType="phone"
            android:padding="12dp"
            android:textColor="@color/font_secondary" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/rounded_input"
            android:padding="8dp"
            app:boxBackgroundMode="none"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:fontFamily="@font/adlam_display"
                android:hint="@string/placeholder_password"
                android:inputType="textPassword"
                android:textColor="@color/font_secondary"
                android:gravity="center_vertical" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/rounded_input"
            android:layout_marginTop="12dp"
            android:padding="8dp"
            app:boxBackgroundMode="none"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:fontFamily="@font/adlam_display"
                android:hint="@string/placeholder_repeat_password"
                android:inputType="textPassword"
                android:gravity="center_vertical"
                android:textColor="@color/font_secondary" />
        </com.google.android.material.textfield.TextInputLayout>


        <CheckBox
            android:id="@+id/termsCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/adlam_display"
            android:text="@string/terms_and_conditions"
            android:textColor="@color/font_primary"
            android:textSize="16sp" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/adlam_display"
            android:text="@string/bt_register"
            android:textColor="@color/bt_font_color" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="16dp"
            android:gravity="center">

            <TextView
                android:id="@+id/loginRedirectText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/adlam_display"
                android:text="@string/have_account"
                android:textColor="@color/font_secondary"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/loginRedirectAction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/adlam_display"
                android:paddingStart="8dp"
                android:paddingEnd="0dp"
                android:text="@string/have_account_action"
                android:textColor="@color/font_primary"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
