<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_primary"
    tools:context="pq.logica.MainActivity">

    <ImageView
        android:id="@+id/logoHome"
        android:layout_width="340dp"
        android:layout_height="236dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.084"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/appNameHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/adlam_display"
        android:text="@string/app_name"
        android:textColor="@color/font_primary"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoHome"
        app:layout_constraintVertical_bias="0.066" />

    <TextView
        android:id="@+id/paragraphHome"
        android:layout_width="316dp"
        android:layout_height="86dp"
        android:fontFamily="@font/adlam_display"
        android:text="@string/start_paragraph"
        android:textAlignment="center"
        android:textColor="@color/bt_font_color"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appNameHome"
        app:layout_constraintVertical_bias="0.117" />

    <TextView
        android:id="@+id/BTNRegisterHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/adlam_display"
        android:text="@string/bt_register"
        android:textColor="@color/font_primary"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paragraphHome"
        app:layout_constraintVertical_bias="0.789" />

    <Button
        android:id="@+id/BTNStartHome"
        android:layout_width="310dp"
        android:layout_height="52dp"
        android:background="@drawable/rounded_button"
        android:text="@string/bt_start"
        android:textColor="@color/bt_font_color"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/BTNRegisterHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paragraphHome"
        app:layout_constraintVertical_bias="0.47" />


</androidx.constraintlayout.widget.ConstraintLayout>
