<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_primary"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp">

        <!-- Sección del Logo y el Mensaje Instructivo -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginBottom="40dp">

            <!-- Logo de la app -->
            <ImageView
                android:id="@+id/imageViewLogo"
                android:layout_width="210dp"
                android:layout_height="240dp"
                android:layout_marginBottom="16dp"
                android:src="@drawable/logo" />

            <!-- Mensaje instructivo -->
            <TextView
                android:id="@+id/textViewInstruction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="8dp"
                android:text="@string/password_recovery_message"
                android:textColor="@color/font_primary"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- Campo de Entrada para el Correo Electrónico -->
        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/placeholder_email"
            android:background="@drawable/rounded_input"
            android:padding="12dp"
            android:textColor="@color/font_secondary"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="30dp" />

        <!-- Botón de Envío -->
        <Button
            android:id="@+id/buttonSend"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/bt_recover_pass"
            android:textColor="@color/bt_font_color"
            android:background="@drawable/rounded_button"
            android:layout_marginTop="30dp" />

        <!-- Loader (oculto por defecto) -->
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginTop="20dp" />

        <!-- Mensaje de éxito (oculto por defecto) -->
        <TextView
            android:id="@+id/textViewSuccess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/font_primary"
            android:textSize="18sp"
            android:text="El correo fue enviado correctamente"
            android:visibility="gone"
            android:layout_marginTop="20dp" />

    </LinearLayout>
</ScrollView>
