<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_primary"
    android:padding="20dp">

    <LinearLayout
        android:id="@+id/profileContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp"
        android:divider="?android:attr/dividerHorizontal"
        android:showDividers="middle">

        <!-- Sección de la Imagen de Perfil -->
        <ImageView
            android:id="@+id/profileImageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginBottom="24dp"
            android:src="@drawable/logo"
            android:padding="8dp" />

        <!-- Sección de Información del Perfil -->
        <LinearLayout
            android:id="@+id/profileInfoContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_marginBottom="30dp">

            <!-- Nombres -->
            <LinearLayout
                android:id="@+id/nameContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="8dp"
                android:padding="12dp"
                android:background="@drawable/label_background">

                <TextView
                    android:id="@+id/labelNameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_first_name"
                    android:textSize="16sp"
                    android:textColor="@color/font_secondary"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/profileNameTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/font_secondary"
                    android:textStyle="bold" />
            </LinearLayout>

            <!-- Apellidos -->
            <LinearLayout
                android:id="@+id/lastnameContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="8dp"
                android:padding="12dp"
                android:background="@drawable/label_background">

                <TextView
                    android:id="@+id/labelLastnameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_last_name"
                    android:textSize="16sp"
                    android:textColor="@color/font_secondary"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/profileLastnameTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/font_secondary"
                    android:textStyle="bold"/>
            </LinearLayout>

            <!-- Correo -->
            <LinearLayout
                android:id="@+id/emailContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="8dp"
                android:padding="12dp"
                android:background="@drawable/label_background">

                <TextView
                    android:id="@+id/labelEmailTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_email"
                    android:textSize="16sp"
                    android:textColor="@color/font_secondary"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/profileEmailTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/font_secondary"
                    android:textStyle="bold" />
            </LinearLayout>

            <!-- Teléfono -->
            <LinearLayout
                android:id="@+id/phoneContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="8dp"
                android:padding="12dp"
                android:background="@drawable/label_background">

                <TextView
                    android:id="@+id/labelPhoneTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_phone"
                    android:textSize="16sp"
                    android:textColor="@color/font_secondary"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/profilePhoneTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/font_secondary"
                    android:textStyle="bold"/>
            </LinearLayout>

        </LinearLayout>

        <!-- Botón de Edición del Perfil -->
        <Button
            android:id="@+id/editProfileButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/edit_btn"
            android:textColor="@color/bt_font_color"
            android:background="@drawable/rounded_button"
            android:layout_marginTop="20dp" />
    </LinearLayout>

</ScrollView>
